--- a/.github/workflows/test-sonar.yml
+++ b/.github/workflows/test-sonar.yml
@@ -1,7 +1,7 @@
 name: DevOps
 on:
   push:
-    branches: ['develop', 'release-*']
+    branches: ['master', 'develop', 'release-*']
 jobs:
   devops:
     name: Test - Unit & Integration & SonarCloud Scan & Slack WebHook
@@ -14,3 +14,14 @@ jobs:
           java-version: 11
       - name: Unit & Integration Tests
         run: mvn -B verify # -B: --batch-mode
+      - name: Sonar
+        if: success() # always() failure() success()
+        run: >
+          mvn -B verify -DskipTests sonar:sonar
+          -Dsonar.projectKey=prodang_miw-tfm-spring
+          -Dsonar.organization=prodrang
+          -Dsonar.host.url=https://sonarcloud.io
+          -Dsonar.login=$SONAR_TOKEN
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
