--- a/.github/workflows/test-sonar.yml
+++ b/.github/workflows/test-sonar.yml
@@ -1,7 +1,7 @@
 name: DevOps
 on:
   push:
-    branches: ['master', 'develop', 'release-*']
+    branches: ['develop', 'release-*']
 jobs:
   devops:
     name: Test - Unit & Integration & SonarCloud Scan & Slack WebHook
