Added properties to compilation & tests TFM-18

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.profiles.active=dev
+#
+spring.output.ansi.enabled=ALWAYS
 
+# Server web ----------------------------------------------
+spring.jackson.default-property-inclusion=NON_NULL
+# Application http://**/actuator/info ---------------------
+management.endpoints.web.exposure.include=health,info
+info.app.artifact=@project.artifactId@
+info.app.version=@project.version@
+info.app.build=@maven.build.timestamp@
