--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,2 +1,6 @@
 #
+logging.level.miw.tfm=DEBUG
 server.port=8082
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:db
