--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>miw.tfm</groupId>
 	<artifactId>miw-tfm-spring</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1-beta-release</version>
 	<packaging>jar</packaging>
 
 	<name>${project.groupId}.${project.artifactId}</name>
@@ -74,6 +74,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>miw-tfm-spring</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
