--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,17 +3,16 @@ on:
   push:
     branches: ['master']
 jobs:
-  devops:
-    name: Deployment
+  deployment:
     runs-on: ubuntu-latest # macos-latest macos-11 windows-2019 ubuntu-20.04
     steps:
       - name: Deploy to EB
-      uses: einaregilsson/beanstalk-deploy@v20
-      with:
-        aws_access_key: ${{ secrets.AWSACCESSKEYID }}
-        aws_secret_key: ${{ secrets.AWSSECRETKEY }}
-        application_name: { miw-tfm-spring }
-        environment_name: { Miwtfmspring-env }
-        version_label: ${{github.SHA}}
-        region: { us-east-1 }
-        deployment_package: target/miw-tfm-spring.jar
+        uses: einaregilsson/beanstalk-deploy@v20
+        with:
+          aws_access_key: ${{ secrets.AWSACCESSKEYID }}
+          aws_secret_key: ${{ secrets.AWSSECRETKEY }}
+          application_name: { miw-tfm-spring }
+          environment_name: { Miwtfmspring-env }
+          version_label: ${{github.SHA}}
+          region: { us-east-1 }
+          deployment_package: target/miw-tfm-spring.jar
