--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,13 @@ jobs:
   deployment:
     runs-on: ubuntu-latest # macos-latest macos-11 windows-2019 ubuntu-20.04
     steps:
+      - uses: actions/checkout@v2
+        with: {fetch-depth: 0}
+      - uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Unit & Integration Tests
+        run: mvn -B verify # -B: --batch-mode
       - name: Deploy to EB
         uses: einaregilsson/beanstalk-deploy@v20
         with:
