--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,4 +22,4 @@ jobs:
           environment_name: Miwtfmspring-env
           version_label: ${{github.SHA}}
           region: us-east-1
-          deployment_package: /target/miw-tfm-spring.jar
+          deployment_package: target/miw-tfm-spring.jar
