Added properties & dependency TFM-25

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,9 @@ management.endpoints.web.exposure.include=health,info
 info.app.artifact=@project.artifactId@
 info.app.version=@project.version@
 info.app.build=@maven.build.timestamp@
+
+#JWT------------------------------------
+miw.tfm.jwt.aws.identityPoolUrl=https://cognito-idp.us-east-1.amazonaws.com/us-east-1_eIfc63aKR
+miw.tfm.jwt.aws.jwkUrl=https://cognito-idp.us-east-1.amazonaws.com/us-east-1_eIfc63aKR/.well-known/jwks.json
+miw.tfm.jwt.aws.connectionTimeOut=2000
+miw.tfm.jwt.aws.readTimeOut=2000
