--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,15 @@
 #
 logging.level.miw.tfm=DEBUG
 server.port=8082
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:db
+
+#BBDD embedded
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:db
+
+#BBDD AWS RDS
+spring.datasource.url = jdbc:mysql://miwtfm.cva1lenoozkz.us-east-1.rds.amazonaws.com:3306/miwtfm
+spring.datasource.username = miwtfm
+spring.datasource.password = Comandos2.
+spring.jpa.hibernate.ddl-auto = create
+spring.jpa.database-platform = org.hibernate.dialect.MySQL8Dialect
