--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,10 @@ miw.tfm.jwt.aws.identityPoolUrl=https://cognito-idp.us-east-1.amazonaws.com/us-e
 miw.tfm.jwt.aws.jwkUrl=https://cognito-idp.us-east-1.amazonaws.com/us-east-1_eIfc63aKR/.well-known/jwks.json
 miw.tfm.jwt.aws.connectionTimeOut=2000
 miw.tfm.jwt.aws.readTimeOut=2000
+
+#BBDD AWS RDS
+spring.datasource.url = jdbc:mysql://miwtfm.cva1lenoozkz.us-east-1.rds.amazonaws.com:3306/miwtfm
+spring.datasource.username = miwtfm
+spring.datasource.password = Comandos2.
+spring.jpa.hibernate.ddl-auto = create
+spring.jpa.database-platform = org.hibernate.dialect.MySQL8Dialect
